--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Webol</title>
   </head>
-  <body>
+  <body style="background-color:rgb(245, 245, 245);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
