add connetion to back with settings

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://www.paypal.com/sdk/js?client-id=ATFWoLYtI3iafMExHOqSP0cpnKRtwlLDjLRPCgXDoKwVQgCE9GOkWoh7Q7No46aiDg3cf2wKAL33bv13"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
